--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -319,21 +319,20 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "\n",
-        "# Try SciPy for exact p-values; fall back to normal approximation if unavailable\n",
+        "# Use SciPy if available only for p-values; model fitting is implemented from scratch\n",
         "try:\n",
         "    from scipy.stats import t as student_t\n",
         "    from scipy.stats import norm as standard_norm\n",
         "    _HAVE_SCIPY = True\n",
         "except Exception:  # pragma: no cover\n",
-        "    from math import erf, sqrt, exp, pi\n",
         "    _HAVE_SCIPY = False\n",
+        "    from math import erf\n",
         "    def _Phi(z):\n",
-        "        # standard normal CDF via error function\n",
         "        return 0.5 * (1.0 + erf(z / np.sqrt(2.0)))\n",
         "\n",
         "class RegressionModel:\n",
         "    \"\"\"\n",
-        "    OLS + Logistic (Logit) regression implemented from scratch (no prebuilt model fitters).\n",
+        "    OLS + Logistic (Logit) regression implemented from scratch (no prebuilt fitters).\n",
         "\n",
         "    Parameters\n",
         "    ----------\n",
@@ -341,7 +340,7 @@
         "        Exogenous variables (predictors).\n",
         "    y : pandas.DataFrame\n",
         "        Endogenous variable (response). One column expected.\n",
-        "        For logistic regression, values must be 0/1.\n",
+        "        For logistic regression, values must be 0/1 (or boolean).\n",
         "    create_intercept : bool\n",
         "        If True, a column named 'intercept' (ones) is added to X (if absent).\n",
         "    regression_type : {'ols','logit'}\n",
@@ -373,10 +372,6 @@
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
-        "        # Do NOT auto-fit here; the assignment asks for fit_model() to choose which to run.\n",
-        "        # (If your grader expects auto-fit on init, uncomment next line.)\n",
-        "        # self.fit_model()\n",
-        "\n",
         "    # ---------- Utilities ----------\n",
         "    def add_intercept(self):\n",
         "        \"\"\"Add an intercept column of ones named 'intercept' if not already present.\"\"\"\n",
@@ -397,7 +392,6 @@
         "        z_stats = np.asarray(z_stats, dtype=float)\n",
         "        if _HAVE_SCIPY:\n",
         "            return 2.0 * standard_norm.sf(np.abs(z_stats))\n",
-        "        # normal CDF fallback\n",
         "        return 2.0 * (1.0 - _Phi(np.abs(z_stats)))\n",
         "\n",
         "    # ---------- OLS ----------\n",
@@ -438,21 +432,26 @@
         "\n",
         "    # ---------- Logistic Regression (Logit) ----------\n",
         "    def logistic_regression(self,\n",
-        "                            lr: float = 0.01,\n",
-        "                            max_iter: int = 10000,\n",
-        "                            tol: float = 1e-6):\n",
+        "                            max_iter: int = 100,\n",
+        "                            tol: float = 1e-8):\n",
         "        \"\"\"\n",
-        "        Fit a binary logistic regression via (stochastic-free) gradient ascent on the log-likelihood.\n",
+        "        Fit a binary logistic regression via Newton–Raphson / IRLS on the log-likelihood.\n",
         "\n",
-        "        - Log-likelihood: sum( y*log(p) + (1-y)*log(1-p) ), where p = sigmoid(X @ beta)\n",
-        "        - Gradient: X^T (y - p)\n",
-        "        - After convergence, compute standard errors from the observed Fisher information:\n",
-        "              I(beta) = X^T W X, with W = diag(p*(1-p))\n",
-        "          Var(beta) = I(beta)^{-1}; SE = sqrt(diag(Var(beta)))\n",
-        "        - z = beta / SE; p-values two-sided from N(0,1).\n",
+        "        Log-likelihood: L(beta) = sum( y*log(p) + (1-y)*log(1-p) ), p = sigmoid(X @ beta)\n",
+        "        Gradient: g = X^T (y - p)\n",
+        "        Hessian: H = - X^T W X, with W = diag(p*(1-p))\n",
+        "        Newton step: beta_{new} = beta - H^{-1} g = beta + (X^T W X)^{-1} X^T (y - p)\n",
+        "\n",
+        "        After convergence:\n",
+        "          Var(beta) = (X^T W X)^{-1}\n",
+        "          SE = sqrt(diag(Var(beta)))\n",
+        "          z = beta / SE  (two-sided p-values from N(0,1))\n",
         "        \"\"\"\n",
         "        X = self.x.astype(float).to_numpy()\n",
         "        y = self.y.astype(float).to_numpy().ravel()\n",
+        "        # convert booleans to floats 0/1\n",
+        "        y = (y > 0).astype(float)\n",
+        "\n",
         "        if not np.isin(np.unique(y), [0.0, 1.0]).all():\n",
         "            raise ValueError(\"For logistic regression, y must be binary (0/1).\")\n",
         "\n",
@@ -460,44 +459,35 @@
         "        beta = np.zeros(k, dtype=float)\n",
         "\n",
         "        def sigmoid(z):\n",
-        "            # stable sigmoid\n",
-        "            z = np.clip(z, -35, 35)  # avoid overflow\n",
+        "            z = np.clip(z, -35, 35)  # numerical stability\n",
         "            return 1.0 / (1.0 + np.exp(-z))\n",
         "\n",
-        "        def log_likelihood(b):\n",
-        "            xb = X @ b\n",
-        "            p = sigmoid(xb)\n",
-        "            eps = 1e-12\n",
-        "            p = np.clip(p, eps, 1 - eps)\n",
-        "            return np.sum(y * np.log(p) + (1 - y) * np.log(1 - p))\n",
-        "\n",
-        "        last_ll = log_likelihood(beta)\n",
-        "        for it in range(max_iter):\n",
+        "        for _ in range(max_iter):\n",
         "            p = sigmoid(X @ beta)\n",
-        "            grad = X.T @ (y - p)  # gradient of log-likelihood\n",
-        "            beta_new = beta + lr * grad  # gradient ASCENT\n",
+        "            W = p * (1.0 - p)  # n-vector\n",
+        "            # Guard against perfect separation (zeros W)\n",
+        "            W = np.clip(W, 1e-12, 1.0)\n",
         "\n",
-        "            ll = log_likelihood(beta_new)\n",
-        "            # simple backtracking if ll decreased\n",
-        "            if ll < last_ll:\n",
-        "                # reduce step and retry once\n",
-        "                lr *= 0.5\n",
-        "                beta_new = beta + lr * grad\n",
-        "                ll = log_likelihood(beta_new)\n",
+        "            # Build X'WX efficiently\n",
+        "            Xw = X * np.sqrt(W)[:, None]\n",
+        "            XtWX = Xw.T @ Xw\n",
+        "            grad = X.T @ (y - p)\n",
         "\n",
+        "            try:\n",
+        "                step = np.linalg.solve(XtWX, grad)\n",
+        "            except np.linalg.LinAlgError:\n",
+        "                step = np.linalg.pinv(XtWX) @ grad\n",
+        "\n",
+        "            beta_new = beta + step\n",
         "            if np.max(np.abs(beta_new - beta)) < tol:\n",
         "                beta = beta_new\n",
-        "                last_ll = ll\n",
         "                break\n",
-        "\n",
         "            beta = beta_new\n",
-        "            last_ll = ll\n",
         "\n",
-        "        # Standard errors via observed Fisher information at beta_hat\n",
+        "        # Final covariance, SE, z, p-values\n",
         "        p = sigmoid(X @ beta)\n",
         "        W = p * (1.0 - p)\n",
-        "        # Construct X^T W X without creating a huge diagonal matrix explicitly\n",
-        "        # (multiply each row of X by corresponding sqrt(W))\n",
+        "        W = np.clip(W, 1e-12, 1.0)\n",
         "        Xw = X * np.sqrt(W)[:, None]\n",
         "        XtWX = Xw.T @ Xw\n",
         "        try:\n",
@@ -535,14 +525,13 @@
         "        \"\"\"\n",
         "        Return a table with columns depending on regression type.\n",
         "\n",
-        "        OLS columns:\n",
+        "        OLS:\n",
         "          ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n",
         "\n",
-        "        Logit columns:\n",
+        "        Logit:\n",
         "          ['Variable name', 'Log odds-ratio value', 'standard error', 'z-statistic', 'p-value']\n",
         "        \"\"\"\n",
         "        if not self.results:\n",
-        "            # If not yet fit, fit now based on chosen type\n",
         "            self.fit_model()\n",
         "\n",
         "        rows = []\n",
