--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -316,246 +316,172 @@
       "outputs": [],
       "source": [
         "#si-exercise\n",
+        "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "\n",
-        "# Use SciPy if available only for p-values; model fitting is implemented from scratch\n",
-        "try:\n",
-        "    from scipy.stats import t as student_t\n",
-        "    from scipy.stats import norm as standard_norm\n",
-        "    _HAVE_SCIPY = True\n",
-        "except Exception:  # pragma: no cover\n",
-        "    _HAVE_SCIPY = False\n",
-        "    from math import erf\n",
-        "    def _Phi(z):\n",
-        "        return 0.5 * (1.0 + erf(z / np.sqrt(2.0)))\n",
+        "from scipy.stats import t as student_t\n",
+        "from scipy.stats import norm\n",
         "\n",
         "class RegressionModel:\n",
-        "    \"\"\"\n",
-        "    OLS + Logistic (Logit) regression implemented from scratch (no prebuilt fitters).\n",
-        "\n",
-        "    Parameters\n",
-        "    ----------\n",
-        "    x : pandas.DataFrame\n",
-        "        Exogenous variables (predictors).\n",
-        "    y : pandas.DataFrame\n",
-        "        Endogenous variable (response). One column expected.\n",
-        "        For logistic regression, values must be 0/1 (or boolean).\n",
-        "    create_intercept : bool\n",
-        "        If True, a column named 'intercept' (ones) is added to X (if absent).\n",
-        "    regression_type : {'ols','logit'}\n",
-        "        Chooses between OLS and Logistic Regression.\n",
-        "\n",
-        "    Attributes\n",
-        "    ----------\n",
-        "    x : pandas.DataFrame\n",
-        "        (Possibly augmented) design matrix.\n",
-        "    y : pandas.DataFrame\n",
-        "        Response.\n",
-        "    results : dict\n",
-        "        Mapping var_name -> {'coefficient','standard_error','t_stat'/'z_stat','p_value'}.\n",
-        "    \"\"\"\n",
-        "    def __init__(self, x: pd.DataFrame, y: pd.DataFrame,\n",
-        "                 create_intercept: bool = True,\n",
-        "                 regression_type: str = \"ols\"):\n",
-        "        if not isinstance(x, pd.DataFrame) or not isinstance(y, pd.DataFrame):\n",
-        "            raise TypeError(\"x and y must be pandas DataFrame objects.\")\n",
-        "        if y.shape[1] != 1:\n",
-        "            raise ValueError(\"y must have exactly one column.\")\n",
-        "\n",
-        "        self.x = x.copy()\n",
-        "        self.y = y.copy()\n",
+        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "        # Ensure DataFrame types\n",
+        "        self.x = x.copy() if isinstance(x, pd.DataFrame) else pd.DataFrame(x)\n",
+        "        self.y = y.copy() if isinstance(y, pd.DataFrame) else pd.DataFrame(y)\n",
         "        self.create_intercept = bool(create_intercept)\n",
         "        self.regression_type = str(regression_type).lower()\n",
+        "        # results container\n",
         "        self.results = {}\n",
+        "        # add intercept if requested\n",
+        "        self.add_intercept()\n",
         "\n",
-        "        if self.create_intercept:\n",
-        "            self.add_intercept()\n",
-        "\n",
-        "    # ---------- Utilities ----------\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Add an intercept column of ones named 'intercept' if not already present.\"\"\"\n",
-        "        if \"intercept\" not in self.x.columns:\n",
+        "        if self.create_intercept and (\"intercept\" not in self.x.columns):\n",
         "            self.x.insert(0, \"intercept\", 1.0)\n",
-        "\n",
-        "    def _pvalues_from_t(self, t_stats: np.ndarray, df: int) -> np.ndarray:\n",
-        "        \"\"\"Two-sided p-values for t-stats with df degrees of freedom (for OLS).\"\"\"\n",
-        "        t_stats = np.asarray(t_stats, dtype=float)\n",
-        "        if _HAVE_SCIPY:\n",
-        "            return 2.0 * student_t.sf(np.abs(t_stats), df)\n",
-        "        # normal approximation fallback\n",
-        "        z = np.abs(t_stats)\n",
-        "        return 2.0 * (1.0 - _Phi(z))\n",
-        "\n",
-        "    def _pvalues_from_z(self, z_stats: np.ndarray) -> np.ndarray:\n",
-        "        \"\"\"Two-sided p-values for z-stats (for Logit).\"\"\"\n",
-        "        z_stats = np.asarray(z_stats, dtype=float)\n",
-        "        if _HAVE_SCIPY:\n",
-        "            return 2.0 * standard_norm.sf(np.abs(z_stats))\n",
-        "        return 2.0 * (1.0 - _Phi(np.abs(z_stats)))\n",
         "\n",
         "    # ---------- OLS ----------\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Estimate OLS and populate self.results.\"\"\"\n",
-        "        X = self.x.astype(float).to_numpy()\n",
-        "        y_vals = self.y.astype(float).to_numpy().ravel()\n",
+        "        X = self.x.to_numpy(dtype=float)                 # (n, k)\n",
+        "        y = self.y.iloc[:, 0].to_numpy(dtype=float).reshape(-1, 1)  # (n, 1)\n",
         "\n",
         "        n, k = X.shape\n",
+        "        # beta_hat = (X'X)^(-1) X'y\n",
         "        XtX = X.T @ X\n",
-        "        try:\n",
-        "            XtX_inv = np.linalg.inv(XtX)\n",
-        "        except np.linalg.LinAlgError:\n",
-        "            XtX_inv = np.linalg.pinv(XtX)\n",
+        "        XtX_inv = np.linalg.inv(XtX)\n",
+        "        Xty = X.T @ y\n",
+        "        beta = XtX_inv @ Xty                                    # (k, 1)\n",
         "\n",
-        "        beta = XtX_inv @ (X.T @ y_vals)\n",
-        "\n",
+        "        # residuals and sigma^2\n",
         "        y_hat = X @ beta\n",
-        "        resid = y_vals - y_hat\n",
-        "        dof = max(n - k, 1)\n",
-        "        sigma2 = (resid @ resid) / dof\n",
+        "        resid = y - y_hat\n",
+        "        sigma2 = float((resid.T @ resid) / (n - k))\n",
+        "        var_beta = sigma2 * XtX_inv                              # (k, k)\n",
+        "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)           # (k, 1)\n",
         "\n",
-        "        var_beta = sigma2 * XtX_inv\n",
-        "        se = np.sqrt(np.diag(var_beta))\n",
-        "        with np.errstate(divide='ignore', invalid='ignore'):\n",
-        "            t_stats = beta / se\n",
-        "        p_vals = self._pvalues_from_t(t_stats, df=dof)\n",
+        "        # t-stats and p-values (two-tailed)\n",
+        "        t_stats = (beta / se).reshape(-1)\n",
+        "        p_vals = 2 * (1 - student_t.cdf(np.abs(t_stats), df=n - k))\n",
         "\n",
-        "        var_names = list(self.x.columns)\n",
+        "        # fill results dict\n",
         "        self.results = {}\n",
-        "        for i, name in enumerate(var_names):\n",
+        "        for i, name in enumerate(self.x.columns):\n",
         "            self.results[name] = {\n",
-        "                \"coefficient\": float(beta[i]),\n",
-        "                \"standard_error\": float(se[i]),\n",
+        "                \"coefficient\": float(beta[i, 0]),\n",
+        "                \"standard_error\": float(se[i, 0]),\n",
         "                \"t_stat\": float(t_stats[i]),\n",
         "                \"p_value\": float(p_vals[i]),\n",
         "            }\n",
         "\n",
-        "    # ---------- Logistic Regression (Logit) ----------\n",
-        "    def logistic_regression(self,\n",
-        "                            max_iter: int = 100,\n",
-        "                            tol: float = 1e-8):\n",
-        "        \"\"\"\n",
-        "        Fit a binary logistic regression via Newton–Raphson / IRLS on the log-likelihood.\n",
+        "        return self.results\n",
         "\n",
-        "        Log-likelihood: L(beta) = sum( y*log(p) + (1-y)*log(1-p) ), p = sigmoid(X @ beta)\n",
-        "        Gradient: g = X^T (y - p)\n",
-        "        Hessian: H = - X^T W X, with W = diag(p*(1-p))\n",
-        "        Newton step: beta_{new} = beta - H^{-1} g = beta + (X^T W X)^{-1} X^T (y - p)\n",
+        "    # ---------- Logistic (Logit) with gradient descent ----------\n",
+        "    @staticmethod\n",
+        "    def _sigmoid(z):\n",
+        "        # stable sigmoid\n",
+        "        z = np.clip(z, -500, 500)\n",
+        "        return 1.0 / (1.0 + np.exp(-z))\n",
         "\n",
-        "        After convergence:\n",
-        "          Var(beta) = (X^T W X)^{-1}\n",
-        "          SE = sqrt(diag(Var(beta)))\n",
-        "          z = beta / SE  (two-sided p-values from N(0,1))\n",
-        "        \"\"\"\n",
-        "        X = self.x.astype(float).to_numpy()\n",
-        "        y = self.y.astype(float).to_numpy().ravel()\n",
-        "        # convert booleans to floats 0/1\n",
-        "        y = (y > 0).astype(float)\n",
+        "    def _log_likelihood(self, X, y, beta):\n",
+        "        # log L = sum( y*log(p) + (1-y)*log(1-p) )\n",
+        "        p = self._sigmoid(X @ beta)\n",
+        "        # numerical stability\n",
+        "        eps = 1e-12\n",
+        "        ll = np.sum(y * np.log(p + eps) + (1 - y) * np.log(1 - p + eps))\n",
+        "        return ll\n",
         "\n",
-        "        if not np.isin(np.unique(y), [0.0, 1.0]).all():\n",
-        "            raise ValueError(\"For logistic regression, y must be binary (0/1).\")\n",
-        "\n",
+        "    def logistic_regression(\n",
+        "        self,\n",
+        "        learning_rate=0.01,\n",
+        "        max_iter=10000,\n",
+        "        tol=1e-6\n",
+        "    ):\n",
+        "        X = self.x.to_numpy(dtype=float)                 # (n, k)\n",
+        "        y = self.y.iloc[:, 0].to_numpy(dtype=float).reshape(-1, 1)  # (n, 1)\n",
         "        n, k = X.shape\n",
-        "        beta = np.zeros(k, dtype=float)\n",
         "\n",
-        "        def sigmoid(z):\n",
-        "            z = np.clip(z, -35, 35)  # numerical stability\n",
-        "            return 1.0 / (1.0 + np.exp(-z))\n",
+        "        # initialize beta (zeros is fine)\n",
+        "        beta = np.zeros((k, 1), dtype=float)\n",
         "\n",
-        "        for _ in range(max_iter):\n",
-        "            p = sigmoid(X @ beta)\n",
-        "            W = p * (1.0 - p)  # n-vector\n",
-        "            # Guard against perfect separation (zeros W)\n",
-        "            W = np.clip(W, 1e-12, 1.0)\n",
+        "        prev_ll = -np.inf\n",
+        "        for it in range(max_iter):\n",
+        "            p = self._sigmoid(X @ beta)                  # (n,1)\n",
+        "            # gradient of negative log-likelihood is X^T (p - y)\n",
+        "            grad = X.T @ (p - y)                         # (k,1)\n",
+        "            # gradient descent on negative log-likelihood\n",
+        "            beta -= learning_rate * grad\n",
         "\n",
-        "            # Build X'WX efficiently\n",
-        "            Xw = X * np.sqrt(W)[:, None]\n",
-        "            XtWX = Xw.T @ Xw\n",
-        "            grad = X.T @ (y - p)\n",
-        "\n",
-        "            try:\n",
-        "                step = np.linalg.solve(XtWX, grad)\n",
-        "            except np.linalg.LinAlgError:\n",
-        "                step = np.linalg.pinv(XtWX) @ grad\n",
-        "\n",
-        "            beta_new = beta + step\n",
-        "            if np.max(np.abs(beta_new - beta)) < tol:\n",
-        "                beta = beta_new\n",
+        "            # check convergence via log-likelihood improvement\n",
+        "            ll = self._log_likelihood(X, y, beta)\n",
+        "            if np.abs(ll - prev_ll) < tol:\n",
         "                break\n",
-        "            beta = beta_new\n",
+        "            prev_ll = ll\n",
         "\n",
-        "        # Final covariance, SE, z, p-values\n",
-        "        p = sigmoid(X @ beta)\n",
-        "        W = p * (1.0 - p)\n",
-        "        W = np.clip(W, 1e-12, 1.0)\n",
-        "        Xw = X * np.sqrt(W)[:, None]\n",
+        "        # Variance-covariance via observed Fisher info: (X^T W X)^(-1)\n",
+        "        p = self._sigmoid(X @ beta)\n",
+        "        W = (p * (1 - p)).reshape(-1)                    # (n,)\n",
+        "        # Guard against zeros\n",
+        "        W = np.clip(W, 1e-12, None)\n",
+        "        # X^T W X efficiently: scale rows of X by sqrt(W)\n",
+        "        Xw = X * np.sqrt(W[:, None])\n",
         "        XtWX = Xw.T @ Xw\n",
         "        try:\n",
         "            cov_beta = np.linalg.inv(XtWX)\n",
         "        except np.linalg.LinAlgError:\n",
+        "            # fallback: pseudo-inverse if singular\n",
         "            cov_beta = np.linalg.pinv(XtWX)\n",
         "\n",
-        "        se = np.sqrt(np.diag(cov_beta))\n",
-        "        with np.errstate(divide='ignore', invalid='ignore'):\n",
-        "            z_stats = beta / se\n",
-        "        p_vals = self._pvalues_from_z(z_stats)\n",
+        "        se = np.sqrt(np.diag(cov_beta)).reshape(-1, 1)\n",
+        "        z_stats = (beta / se).reshape(-1)\n",
+        "        p_vals = 2 * (1 - norm.cdf(np.abs(z_stats)))\n",
         "\n",
-        "        var_names = list(self.x.columns)\n",
+        "        # Store as log-odds (coefficients)\n",
         "        self.results = {}\n",
-        "        for i, name in enumerate(var_names):\n",
+        "        for i, name in enumerate(self.x.columns):\n",
         "            self.results[name] = {\n",
-        "                \"coefficient\": float(beta[i]),         # log-odds (logit coefficient)\n",
-        "                \"standard_error\": float(se[i]),\n",
+        "                \"coefficient\": float(beta[i, 0]),          # log-odds ratio\n",
+        "                \"standard_error\": float(se[i, 0]),\n",
         "                \"z_stat\": float(z_stats[i]),\n",
         "                \"p_value\": float(p_vals[i]),\n",
         "            }\n",
         "\n",
-        "    # ---------- Orchestrator ----------\n",
+        "        return self.results\n",
+        "\n",
+        "    # ---------- Selector ----------\n",
         "    def fit_model(self):\n",
-        "        \"\"\"Dispatch to OLS or Logistic based on self.regression_type.\"\"\"\n",
         "        if self.regression_type == \"ols\":\n",
-        "            self.ols_regression()\n",
+        "            return self.ols_regression()\n",
         "        elif self.regression_type == \"logit\":\n",
-        "            self.logistic_regression()\n",
+        "            return self.logistic_regression()\n",
         "        else:\n",
         "            raise ValueError(\"regression_type must be 'ols' or 'logit'.\")\n",
         "\n",
-        "    # ---------- Summary ----------\n",
-        "    def summary(self) -> pd.DataFrame:\n",
-        "        \"\"\"\n",
-        "        Return a table with columns depending on regression type.\n",
-        "\n",
-        "        OLS:\n",
-        "          ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n",
-        "\n",
-        "        Logit:\n",
-        "          ['Variable name', 'Log odds-ratio value', 'standard error', 'z-statistic', 'p-value']\n",
-        "        \"\"\"\n",
-        "        if not self.results:\n",
-        "            self.fit_model()\n",
-        "\n",
+        "    # ---------- Summary table ----------\n",
+        "    def summary(self):\n",
         "        rows = []\n",
         "        if self.regression_type == \"ols\":\n",
         "            for name in self.x.columns:\n",
         "                r = self.results.get(name, {})\n",
-        "                rows.append([\n",
-        "                    name,\n",
-        "                    r.get(\"coefficient\", np.nan),\n",
-        "                    r.get(\"standard_error\", np.nan),\n",
-        "                    r.get(\"t_stat\", np.nan),\n",
-        "                    r.get(\"p_value\", np.nan),\n",
-        "                ])\n",
+        "                rows.append(\n",
+        "                    [\n",
+        "                        name,\n",
+        "                        r.get(\"coefficient\", np.nan),\n",
+        "                        r.get(\"standard_error\", np.nan),\n",
+        "                        r.get(\"t_stat\", np.nan),\n",
+        "                        r.get(\"p_value\", np.nan),\n",
+        "                    ]\n",
+        "                )\n",
         "            cols = [\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]\n",
         "        else:  # logit\n",
         "            for name in self.x.columns:\n",
         "                r = self.results.get(name, {})\n",
-        "                rows.append([\n",
-        "                    name,\n",
-        "                    r.get(\"coefficient\", np.nan),\n",
-        "                    r.get(\"standard_error\", np.nan),\n",
-        "                    r.get(\"z_stat\", np.nan),\n",
-        "                    r.get(\"p_value\", np.nan),\n",
-        "                ])\n",
+        "                rows.append(\n",
+        "                    [\n",
+        "                        name,\n",
+        "                        r.get(\"coefficient\", np.nan),  # log-odds\n",
+        "                        r.get(\"standard_error\", np.nan),\n",
+        "                        r.get(\"z_stat\", np.nan),\n",
+        "                        r.get(\"p_value\", np.nan),\n",
+        "                    ]\n",
+        "                )\n",
         "            cols = [\"Variable name\", \"Log odds-ratio value\", \"standard error\", \"z-statistic\", \"p-value\"]\n",
         "\n",
         "        return pd.DataFrame(rows, columns=cols)\n"
