--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -324,14 +324,11 @@
         "\n",
         "class RegressionModel:\n",
         "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-        "        # Ensure DataFrame types\n",
         "        self.x = x.copy() if isinstance(x, pd.DataFrame) else pd.DataFrame(x)\n",
         "        self.y = y.copy() if isinstance(y, pd.DataFrame) else pd.DataFrame(y)\n",
         "        self.create_intercept = bool(create_intercept)\n",
         "        self.regression_type = str(regression_type).lower()\n",
-        "        # results container\n",
         "        self.results = {}\n",
-        "        # add intercept if requested\n",
         "        self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
@@ -344,24 +341,19 @@
         "        y = self.y.iloc[:, 0].to_numpy(dtype=float).reshape(-1, 1)  # (n, 1)\n",
         "\n",
         "        n, k = X.shape\n",
-        "        # beta_hat = (X'X)^(-1) X'y\n",
         "        XtX = X.T @ X\n",
         "        XtX_inv = np.linalg.inv(XtX)\n",
-        "        Xty = X.T @ y\n",
-        "        beta = XtX_inv @ Xty                                    # (k, 1)\n",
+        "        beta = XtX_inv @ (X.T @ y)                       # (k,1)\n",
         "\n",
-        "        # residuals and sigma^2\n",
         "        y_hat = X @ beta\n",
         "        resid = y - y_hat\n",
         "        sigma2 = float((resid.T @ resid) / (n - k))\n",
-        "        var_beta = sigma2 * XtX_inv                              # (k, k)\n",
-        "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)           # (k, 1)\n",
+        "        var_beta = sigma2 * XtX_inv\n",
+        "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)\n",
         "\n",
-        "        # t-stats and p-values (two-tailed)\n",
         "        t_stats = (beta / se).reshape(-1)\n",
         "        p_vals = 2 * (1 - student_t.cdf(np.abs(t_stats), df=n - k))\n",
         "\n",
-        "        # fill results dict\n",
         "        self.results = {}\n",
         "        for i, name in enumerate(self.x.columns):\n",
         "            self.results[name] = {\n",
@@ -370,79 +362,67 @@
         "                \"t_stat\": float(t_stats[i]),\n",
         "                \"p_value\": float(p_vals[i]),\n",
         "            }\n",
-        "\n",
         "        return self.results\n",
         "\n",
-        "    # ---------- Logistic (Logit) with gradient descent ----------\n",
         "    @staticmethod\n",
         "    def _sigmoid(z):\n",
-        "        # stable sigmoid\n",
         "        z = np.clip(z, -500, 500)\n",
         "        return 1.0 / (1.0 + np.exp(-z))\n",
         "\n",
-        "    def _log_likelihood(self, X, y, beta):\n",
-        "        # log L = sum( y*log(p) + (1-y)*log(1-p) )\n",
-        "        p = self._sigmoid(X @ beta)\n",
-        "        # numerical stability\n",
-        "        eps = 1e-12\n",
-        "        ll = np.sum(y * np.log(p + eps) + (1 - y) * np.log(1 - p + eps))\n",
-        "        return ll\n",
-        "\n",
-        "    def logistic_regression(\n",
-        "        self,\n",
-        "        learning_rate=0.01,\n",
-        "        max_iter=10000,\n",
-        "        tol=1e-6\n",
-        "    ):\n",
+        "    # ---------- Logistic (Logit) via IRLS / Fisher scoring ----------\n",
+        "    def logistic_regression(self, max_iter=100, tol=1e-8, ridge=1e-8):\n",
         "        X = self.x.to_numpy(dtype=float)                 # (n, k)\n",
         "        y = self.y.iloc[:, 0].to_numpy(dtype=float).reshape(-1, 1)  # (n, 1)\n",
         "        n, k = X.shape\n",
         "\n",
-        "        # initialize beta (zeros is fine)\n",
         "        beta = np.zeros((k, 1), dtype=float)\n",
         "\n",
-        "        prev_ll = -np.inf\n",
-        "        for it in range(max_iter):\n",
-        "            p = self._sigmoid(X @ beta)                  # (n,1)\n",
-        "            # gradient of negative log-likelihood is X^T (p - y)\n",
-        "            grad = X.T @ (p - y)                         # (k,1)\n",
-        "            # gradient descent on negative log-likelihood\n",
-        "            beta -= learning_rate * grad\n",
+        "        for _ in range(max_iter):\n",
+        "            eta = X @ beta\n",
+        "            p = self._sigmoid(eta)                       # (n,1)\n",
+        "            W = (p * (1 - p)).reshape(-1)               # (n,)\n",
+        "            # 안정화\n",
+        "            W = np.clip(W, 1e-12, None)\n",
         "\n",
-        "            # check convergence via log-likelihood improvement\n",
-        "            ll = self._log_likelihood(X, y, beta)\n",
-        "            if np.abs(ll - prev_ll) < tol:\n",
+        "            # 점근적 뉴턴-랩슨 step: beta_{new} = beta + (X'WX)^(-1) X'(y - p)\n",
+        "            Xw = X * np.sqrt(W[:, None])                # 가중치 적용\n",
+        "            XtWX = Xw.T @ Xw + ridge * np.eye(k)        # 약한 ridge로 역행렬 안정화\n",
+        "            try:\n",
+        "                step = np.linalg.solve(XtWX, X.T @ (y - p))\n",
+        "            except np.linalg.LinAlgError:\n",
+        "                step = np.linalg.pinv(XtWX) @ (X.T @ (y - p))\n",
+        "\n",
+        "            beta_new = beta + step\n",
+        "\n",
+        "            if np.max(np.abs(beta_new - beta)) < tol:\n",
+        "                beta = beta_new\n",
         "                break\n",
-        "            prev_ll = ll\n",
+        "            beta = beta_new\n",
         "\n",
-        "        # Variance-covariance via observed Fisher info: (X^T W X)^(-1)\n",
-        "        p = self._sigmoid(X @ beta)\n",
-        "        W = (p * (1 - p)).reshape(-1)                    # (n,)\n",
-        "        # Guard against zeros\n",
+        "        # 분산-공분산: (X' W X)^(-1)\n",
+        "        eta = X @ beta\n",
+        "        p = self._sigmoid(eta)\n",
+        "        W = (p * (1 - p)).reshape(-1)\n",
         "        W = np.clip(W, 1e-12, None)\n",
-        "        # X^T W X efficiently: scale rows of X by sqrt(W)\n",
         "        Xw = X * np.sqrt(W[:, None])\n",
-        "        XtWX = Xw.T @ Xw\n",
+        "        XtWX = Xw.T @ Xw + ridge * np.eye(k)\n",
         "        try:\n",
         "            cov_beta = np.linalg.inv(XtWX)\n",
         "        except np.linalg.LinAlgError:\n",
-        "            # fallback: pseudo-inverse if singular\n",
         "            cov_beta = np.linalg.pinv(XtWX)\n",
         "\n",
         "        se = np.sqrt(np.diag(cov_beta)).reshape(-1, 1)\n",
         "        z_stats = (beta / se).reshape(-1)\n",
         "        p_vals = 2 * (1 - norm.cdf(np.abs(z_stats)))\n",
         "\n",
-        "        # Store as log-odds (coefficients)\n",
         "        self.results = {}\n",
         "        for i, name in enumerate(self.x.columns):\n",
         "            self.results[name] = {\n",
-        "                \"coefficient\": float(beta[i, 0]),          # log-odds ratio\n",
+        "                \"coefficient\": float(beta[i, 0]),          # log-odds(=coef)\n",
         "                \"standard_error\": float(se[i, 0]),\n",
         "                \"z_stat\": float(z_stats[i]),\n",
         "                \"p_value\": float(p_vals[i]),\n",
         "            }\n",
-        "\n",
         "        return self.results\n",
         "\n",
         "    # ---------- Selector ----------\n",
@@ -454,34 +434,31 @@
         "        else:\n",
         "            raise ValueError(\"regression_type must be 'ols' or 'logit'.\")\n",
         "\n",
-        "    # ---------- Summary table ----------\n",
+        "    # ---------- Summary ----------\n",
         "    def summary(self):\n",
         "        rows = []\n",
         "        if self.regression_type == \"ols\":\n",
         "            for name in self.x.columns:\n",
         "                r = self.results.get(name, {})\n",
-        "                rows.append(\n",
-        "                    [\n",
-        "                        name,\n",
-        "                        r.get(\"coefficient\", np.nan),\n",
-        "                        r.get(\"standard_error\", np.nan),\n",
-        "                        r.get(\"t_stat\", np.nan),\n",
-        "                        r.get(\"p_value\", np.nan),\n",
-        "                    ]\n",
-        "                )\n",
+        "                rows.append([\n",
+        "                    name,\n",
+        "                    r.get(\"coefficient\", np.nan),\n",
+        "                    r.get(\"standard_error\", np.nan),\n",
+        "                    r.get(\"t_stat\", np.nan),\n",
+        "                    r.get(\"p_value\", np.nan),\n",
+        "                ])\n",
         "            cols = [\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]\n",
         "        else:  # logit\n",
         "            for name in self.x.columns:\n",
         "                r = self.results.get(name, {})\n",
-        "                rows.append(\n",
-        "                    [\n",
-        "                        name,\n",
-        "                        r.get(\"coefficient\", np.nan),  # log-odds\n",
-        "                        r.get(\"standard_error\", np.nan),\n",
-        "                        r.get(\"z_stat\", np.nan),\n",
-        "                        r.get(\"p_value\", np.nan),\n",
-        "                    ]\n",
-        "                )\n",
+        "                rows.append([\n",
+        "                    name,\n",
+        "                    r.get(\"coefficient\", np.nan),  # log-odds ratio\n",
+        "                    r.get(\"standard_error\", np.nan),\n",
+        "                    r.get(\"z_stat\", np.nan),\n",
+        "                    r.get(\"p_value\", np.nan),\n",
+        "                ])\n",
+        "            # 과제 문구와 동일하게 표 제목 지정\n",
         "            cols = [\"Variable name\", \"Log odds-ratio value\", \"standard error\", \"z-statistic\", \"p-value\"]\n",
         "\n",
         "        return pd.DataFrame(rows, columns=cols)\n"
